# 2038-AugmentedNormalcy

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  TODO.md
application/: CMakeLists.txt  camera.cpp  config.hpp  display.cpp  headset.cpp  runtime.cpp  server.cpp
cmake/: bms.cmake  boost.cmake  buffer.cmake  camera.cmake  decoder.cmake  display.cmake  encoder.cmake  (+5 more)
internal/infrastructure/buffer/: CMakeLists.txt  array_buffer.cpp  array_buffer.hpp  buffer.cpp  buffer.hpp  jetson_buffer.cpp  jetson_buffer.hpp
internal/infrastructure/camera/: CMakeLists.txt  camera.cpp  camera.hpp  fake_camera.cpp  fake_camera.hpp  libcamera_camera.cpp  libcamera_camera.hpp  string_camera.cpp  string_camera.hpp
internal/infrastructure/gpio/: CMakeLists.txt  gpio.cpp  gpio.hpp  null_gpio.cpp  null_gpio.hpp  pigpio_gpio.cpp  pigpio_gpio.hpp
internal/infrastructure/graphics/: CMakeLists.txt  display_graphics.cpp  display_graphics.hpp  glfw_graphics.cpp  glfw_graphics.hpp  graphics.cpp  graphics.hpp  headset_graphics.cpp  headset_graphics.hpp  null_graphics.cpp  null_graphics.hpp
internal/infrastructure/tcp/: CMakeLists.txt  tcp_client.cpp  tcp_client.hpp  tcp_common.hpp  tcp_context.hpp  tcp_packet_header.hpp  tcp_server.cpp  tcp_server.hpp  tcp_utils.hpp
internal/infrastructure/websocket/: CMakeLists.txt  websocket_client.cpp  websocket_client.hpp  websocket_server.cpp  websocket_server.hpp  websocket_utils.hpp
internal/service/: CMakeLists.txt  camera_streamer.cpp  camera_streamer.hpp  display_streamer.cpp  display_streamer.hpp  headset_streamer.cpp  headset_streamer.hpp  server_encoder.cpp  server_encoder.hpp  server_streamer.cpp  server_streamer.hpp
internal/service/headset/: headset_streamer.cpp  headset_streamer.hpp
internal/service/server/: connection_manager.cpp  connection_manager.hpp  server_streamer.cpp  server_streamer.hpp
normalcy-legacy/internal/infrastructure/bms/: CMakeLists.txt  null_bms.cpp
normalcy-legacy/internal/service/: CMakeLists.txt  camera_streamer.cpp  camera_streamer.hpp  display_streamer.cpp  display_streamer.hpp
normalcy-legacy/internal/service/headset/: headset_streamer.cpp
normalcy-legacy/prototype/scratch/imgui_example/: CMakeLists.txt
normalcy-legacy/prototype/scratch/imgui_example/glad/src/: glad.c
prototype/: CMakeLists.txt  README.md
prototype/cmake/: camera.cmake  codec.cmake  platform.cmake  tools.cmake
prototype/cmd/: CMakeLists.txt
prototype/include/: preprocessor.hpp
prototype/internal/: dummy.cpp
prototype/internal/domain/camera/: entity.cpp  entity.hpp  repository.hpp  serializer.hpp
prototype/internal/infrastructure/: common.hpp
prototype/internal/infrastructure/camera/: CMakeLists.txt  camera.cpp  camera.hpp  fake_camera.cpp  fake_camera.hpp  libcamera_camera.cpp  libcamera_camera.hpp
prototype/internal/infrastructure/codec/: CMakeLists.txt  bsp_packet.hpp  codec.cpp  codec.hpp  cuda_context.hpp  cuda_decoder.cpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  packet.hpp
prototype/internal/infrastructure/codec/cuda/: cuda_codec.cpp  cuda_codec.hpp  cuda_decoder.cpp  cuda_encoder.cpp
prototype/internal/infrastructure/codec/v4l2/: v4l2_codec.hpp  v4l2_encoder.cpp  v4l2_encoder.hpp
prototype/internal/infrastructure/repository/: base.hpp  memory.hpp
prototype/internal/infrastructure/udp/: client.cpp  client.hpp  common.hpp  constants.hpp  context.hpp  server.hpp
prototype/internal/utility/: buffer_pool.hpp  worker_thread.hpp
prototype/scratch/glfw_test/: CMakeLists.txt  camera.cpp  graphics.cpp  main.cpp  output.txt  weston.ini  weston.sh
prototype/scratch/glfw_test/include/: camera.hpp  graphics.hpp  request.hpp
prototype/scratch/glfw_test/include/glad/include/glad/: glad_egl.h
prototype/scratch/imgui_example/: main.cpp
prototype/scratch/imgui_example/glad/include/glad/: glad.h
prototype/scratch/nanogui_example/: graphics_classes.hpp  main.cpp
prototype/scratch/notes/: random_pi_cage_notes.txt  random_pipeline_documentation.txt
prototype/scratch/video_sdk/: CMakeLists.txt
prototype/scratch/video_sdk/Interface/: nvEncodeAPI.h  nvcuvid.h
prototype/scratch/video_sdk/NvCodec/NvDecoder/: NvDecoder.cpp
prototype/scratch/video_sdk/Utils/: FFmpegStreamer.h
prototype/scratch/video_sdk/example/local_app_trans_dec/: AppTransDec.cpp  CMakeLists.txt  FramePresenter.h  FramePresenterGLX.cpp  FramePresenterGLX.h
prototype/scripts/cuda/: hello  hello_new.exp  hello_new.lib  print  print.cu  print_new.exp  print_new.lib
prototype/scripts/gstreamer/: README.md  random_pipelines_compositing.txt
prototype/scripts/setup/: install_boost.bat  install_boost.sh
prototype/server/: README.md
prototype/server/scripts/one-offs/: hello
prototype/test/: CMakeLists.txt
prototype/test/test_infrastructure/: bsp_packet.cpp  codec.cpp  common.cpp  udp.cpp
prototype/test/test_infrastructure/test_camera/: camera.cpp  out.yuv
prototype/test/test_infrastructure/test_codec/: codec.cpp  test.nv12  test.yuv
prototype/test/test_system/test_pipeline/: camera_encoder.cpp
prototype/test/test_utility/: buffer_pool.cpp  worker_thread.cpp
scratch/nv_jpeg_dma/: CMakeLists.txt  buffer_test.cpp
scratch/pi_decode_sw/: CMakeLists.txt  main.cpp
scratch/pi_encode_av/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/test_infrastructure/test_camera/: frame_capture.cpp  test_frame_capture.cpp
test/test_infrastructure/test_decoder/: fake_buffer_pool.hpp  test_sw_decoder.cpp  test_v4l2_decoder.cpp
test/test_infrastructure/test_encoder/: fake_camera.cpp  fake_camera.hpp  test_jetson_encoder.cpp  test_sw_encoder.cpp  test_v4l2_encoder.cpp
test/test_infrastructure/test_location/: test_location.cpp
test/test_infrastructure/test_tcp/: camera.hpp  client.hpp  communication.cpp  communication.hpp  headset.hpp  server.cpp  server.hpp  test_communication.cpp  test_context.cpp
test/test_infrastructure/test_websocket/: test_websocket.cpp  test_websocket.hpp
test/test_service/: camera_streamer_server.hpp  test_camera_streamer.cpp  test_server_encoder.cpp  test_server_streamer.cpp
(+239 files in other folders)
